.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nakup
  namespace: production
  labels:
    app: nakup
  annotations:
    cloud.google.com/backend-config: '{"default": "nakup-backendconfig"}'
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nakup
